main.tf
data "aws_availability_zones" "available_zones" {
  state = "available"
}

resource "aws_vpc" "default" {
  cidr_block = "10.32.0.0/16"

  tags = {
    Name    = "vpc-for-ecs"
  }
}
